# libpaxos2

./: CMakeLists.txt  README.md
cmake/: FindBdb.cmake  FindLibevent.cmake
tests/: example_acceptor.c  example_proposer.c
